# docquery

./: .gitignore  DEPLOYMENT.md  PROJECT_STRUCTURE.md  README.md  docker-compose.prod.yml  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy-ec2.yml  deploy.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  pytest.ini  requirements.txt  test_logout_minimal.py  test_redis_connection.py
backend/app/: __init__.py  auth.py  config.py  database.py  main.py  models.py  redis_client.py  schemas.py
backend/app/routers/: auth.py  cache.py  documents.py  documents_delete.py  query.py  rag.py  users.py
backend/app/services/: __init__.py  audio_transcription.py  cache.py  chunker.py  citation_tracker.py  document_processor.py  docx_extractor.py  embedding.py  generator.py  ocr.py  pdf_extractor.py  search.py  vector_index.py
backend/app/tasks/: __init__.py  celery_app.py  document_tasks.py
backend/scripts/: add_fts_index.py  create_admin.py  init_db.py  test_setup.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_auth.py  test_cache.py  test_document_processing.py  test_rag.py  test_search.py
docs/architecture/: ARCHITECTURE.md
docs/backend/: DELIVERY_SUMMARY.md  LOCAL_TESTING_NO_DOCKER.md  PHASE2_COMPLETE.md  PHASE2_SUMMARY.md  PHASE3_SEARCH.md  PHASE3_SETUP_GUIDE.md  PHASE4_RAG.md  PHASE4_SETUP_GUIDE.md  PHASE5_FIXES.md  PHASE5_SETUP_GUIDE.md  QUICK_START.md  (+2 more)
frontend/: eslint.config.mjs  package-lock.json  package.json
scripts/: build_and_push.sh  deploy_ec2.sh  setup_ec2_instance.sh
(+20 files in other folders)
